2006-03-09  Peter Dennis Bartok  <pbartok@novell.com>

	* XplatUI.cs, XplatUIDriver.cs, XplatUIX11.cs, XplatUIWin32.cs, 
	  XplatUIOSX.cs: Removed HWnd argument from CalcuateClientRect, not used
	  and was requiring premature handle creation for calls from above
	* Form.cs, Control.cs: Removed handle arguments from calls to
	  CalculateClientRect()

2006-03-09  Peter Dennis Bartok  <pbartok@novell.com> 

	* ListView.cs (HeaderMouseMove): Fix csc compilation. 
	  drag_column.column_rect is MarshalByRef and can't be used that way

2006-03-09  Peter Dennis Bartok  <pbartok@novell.com>

	* AxHost.cs: Added deserialization constructor for 
	  AxHost+State (fixes 77743)

2006-03-09  Mike Kestner  <mkestner@novell.com>

	* ListView.cs: 
	- Added column drag reordering for details view.
	- fixed behavior when mouse is dragged off column and
	AllowColumnReorder is false.
	* ColumnHeader.cs: clone the format too in Clone.
	* Theme.cs: add DrawListViewHeaderDragDetails method.
	* ThemeWin32Classic.cs:
	- impl new method for drawing drag column shadows and targets.
	- support column offset for details mode in DrawListViewItem.

2006-03-09  Peter Dennis Bartok  <pbartok@novell.com>

	* TextControl.cs: Reset the char_count when the document is cleared
	  (Fixes bug reported on mono-winforms mailing list)

2006-03-09  Peter Dennis Bartok  <pbartok@novell.com> 

	* TextBoxBase.cs: Honor the Handled state of KeyPress events. Instead
	  of calling base we simply process the key ourselves, since both
	  DefWindowProc and the handled method would set m.Result. 
	  (Fixes #77732)

2006-03-09  Peter Dennis Bartok  <pbartok@novell.com>

	* Form.cs(ScaleCore): No longer calling base.ScaleCore since that
	  method also moves the window; instead implemented a copy of
	  Control.ScaleCore (Part of fix for #77456)
	* TextBoxBase.cs: 
	  - Created new CreateGraphicsInternal method to allow providing
	    a graphics context when no handle is created without triggering