@@ -1,3 +1,7 @@
+2006-03-09  Peter Dennis Bartok  <pbartok@novell.com> 
+
+	* AutoScaleMode.cs: Added. Fix build.
+
 2006-03-09  Peter Dennis Bartok  <pbartok@novell.com>
 
 	* XplatUI.cs, XplatUIDriver.cs, XplatUIX11.cs, XplatUIWin32.cs, 
